--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -5,6 +5,32 @@ $browser = omarchy-launch-browser
 unbind = SUPER, W
 bindd = SUPER, Q, Kill active windows, killactive
 
+## VIM MOTIONS
+unbind = SUPER, H
+unbind = SUPER, J
+unbind = SUPER, K
+unbind = SUPER, L
+unbind = SUPER SHIFT, H
+unbind = SUPER SHIFT, J
+unbind = SUPER SHIFT, K
+unbind = SUPER SHIFT, L
+
+bindd = SUPER, H, Move focus left, movefocus, l
+bindd = SUPER, L, Move focus right, movefocus, r
+bindd = SUPER, K, Move focus up, movefocus, u
+bindd = SUPER, J, Move focus down, movefocus, d
+bindd = SUPER SHIFT, H, Swap window to the left, swapwindow, l
+bindd = SUPER SHIFT, L, Swap window to the right, swapwindow, r
+bindd = SUPER SHIFT, K, Swap window up, swapwindow, u
+bindd = SUPER SHIFT, J, Swap window down, swapwindow, d
+bindd = SUPER, semicolon, Toggle split, togglesplit, # dwindle
+
+# Hold SUPER + move with arrow keys
+bind = SUPER, left,  movewindow, l
+bind = SUPER, right, movewindow, r
+bind = SUPER, up,    movewindow, u
+bind = SUPER, down,  movewindow, d
+
 
 bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, E, Yazi, exec, $terminal -e yazi
@@ -18,7 +44,7 @@ bindd = SUPER SHIFT, M, Messages, exec, omarchy-launch-or-focus-webapp "Google M
 
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, N, Xournalpp, exec, uwsm-app -- env = GDK_BACKEND=x11 xournalpp
-bindd = SUPER, D, Discord, exec, uwsm-app -- discord
+bindd = SUPER, D, Discord, exec, uwsm-app -- vesktop
 bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, SLASH, Passwords, exec, uwsm-app -- bitwarden-desktop
 
