--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -33,7 +33,7 @@ bind = SUPER, down,  movewindow, d
 
 
 bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, E, Yazi, exec, $terminal -e yazi
+bindd = SUPER, E, Yazi, exec, omarchy-launch-tui yazi
 bindd = SUPER SHIFT, E, File manager, exec, uwsm-app -- nautilus --new-window
 
 bindd = SUPER, B, Browser, exec, $browser
@@ -45,7 +45,7 @@ bindd = SUPER SHIFT, M, Messages, exec, omarchy-launch-or-focus-webapp "Google M
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, N, Xournalpp, exec, uwsm-app -- env = GDK_BACKEND=x11 xournalpp
 bindd = SUPER, D, Discord, exec, uwsm-app -- vesktop
-bindd = SUPER SHIFT, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER, SLASH, Passwords, exec, $terminal --class bw-quicksearch -t "Bitwarden Quick Search" -o window.dimensions.columns=60 -o window.dimensions.lines=12 -e ~/.local/bin/bw-quicksearch
 bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- bitwarden-desktop
 
@@ -60,11 +60,11 @@ unbind = SUPER, S
 bindd = SUPER, S, Sound, exec, uwsm-app -- xdg-terminal-exec --app-id=com.omarchy.Wiremix -e wiremix
 unbind = SUPER,
 unbind = SUPER, T
-bindd = SUPER, T, Activity, exec, $terminal -e btop
+bindd = SUPER, T, Activity, exec, omarchy-launch-tui btop
 
 unbind = SUPER, P
-bindd = SUPER, P, Powersave, exec, $terminal -e auto-cpufreq --force powersave
-bindd = SUPER SHIFT, P, Performance, exec, $terminal -e auto-cpufreq --force performance
+bindd = SUPER, P, Powersave, exec, omarchy-launch-tui auto-cpufreq --force powersave
+bindd = SUPER SHIFT, P, Performance, exec, omarchy-launch-tui auto-cpufreq --force performance
 
 bindd = SUPER SHIFT, C, Color picking, exec, pkill hyprpicker || hyprpicker -a
 bindd = SUPER, C, Calculator, exec, gnome-calculator
