--- a/hypr-bindings/.config/hypr/bindings.conf
+++ b/hypr-bindings/.config/hypr/bindings.conf
@@ -49,7 +49,11 @@ bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 bindd = SUPER, SLASH, Passwords, exec, $terminal --class bw-quicksearch -t "Bitwarden Quick Search" -o window.dimensions.columns=60 -o window.dimensions.lines=12 -e ~/.local/bin/bw-quicksearch
 bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- bitwarden-desktop
 
-
+bind = SUPER SHIFT, Q, togglespecialworkspace, magic
+bind = SUPER SHIFT, Q, movetoworkspace, +0
+bind = SUPER SHIFT, Q, togglespecialworkspace, magic
+bind = SUPER SHIFT, Q, movetoworkspace, special:magic
+bind = SUPER SHIFT, Q, togglespecialworkspace, magic
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 #bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
